Fixed a minor issue where technical task in ticket pop up would have the wrong background-color.

--- a/styles/boardTaskPopUp.css
+++ b/styles/boardTaskPopUp.css
@@ -45,6 +45,14 @@
   border-radius: 5px;
 }
 
+#task-pop-up-nav p.user-story {
+  background-color: rgb(0, 56, 255);
+}
+
+#task-pop-up-nav p.technical-task {
+  background-color: rgb(31, 215, 193);
+}
+
 #task-pop-up-nav button {
   cursor: pointer;
   background-color: white;
@@ -137,8 +145,7 @@
 }
 
 #pop-up-bottom-buttons button:hover img {
-  filter: brightness(0) saturate(100%) invert(50%) sepia(88%) saturate(2500%) hue-rotate(165deg)
-    brightness(90%) contrast(85%);
+  filter: brightness(0) saturate(100%) invert(50%) sepia(88%) saturate(2500%) hue-rotate(165deg) brightness(90%) contrast(85%);
 }
 
 #pop-up-bottom-buttons div {
